[package]
name = "rust-crypto"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha2 = "0.9.8"
hex = "0.4.3"
secp256k1 = { version = "0.20.3", features = ["rand"] }
rand = { version = "0.6", features = ["std"] }
ripemd160 = "0.9.1"
num-bigint = "0.4.3"
num-traits = "0.2.14"
